--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	
 	<name>maven-web-application</name>
 
-	<description>Maven  Project for Java Project</description>
+	<description>Maven web  Project for Java Project</description>
 
 	<organization>
 		<name>Mithun Technologies</name>
