--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 			<version>${spring.version}</version>
 		</dependency>
 		
-		<!-- provided dependencies -->
+		<!-- provided dependencies 
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -91,7 +91,7 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
-		
+		-->
 	</dependencies>
 	
 	<distributionManagement>
