--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 			<version>${spring.version}</version>
 		</dependency>
 		
-		<!-- provided dependencies 
+		<!-- provided dependencies -->
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -91,21 +91,21 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
-		-->
+
 	</dependencies>
 	
 	<distributionManagement>
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>mohan </name>
+	      <name>mohan</name>
 	      <url>http:/3.91.194.143:8089/repository/wallmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>mohan </name>
-	      <url>http:/3.91.194.143:8089/repository/wallmart-snapshot/</url>
+	      <name>mohan1</name>
+	      <url>http://3.91.194.143:8089/repository/wallmart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
