--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>mohan1</name>
+	      <name>mohan</name>
 	      <url>http://184.73.139.175:8089/repository/wallmart-snapshot/</url>
 	    </snapshotRepository>
 	    
