--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,13 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>admin</name>
+	      <name>mohan</name>
 	      <url>http://184.73.139.175:8089/repository/wallmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>admin</name>
+	      <name>mohan</name>
 	      <url>http://184.73.139.175:8089/repository/wallmart-snapshot/</url>
 	    </snapshotRepository>
 	    
