--- a/pom.xml
+++ b/pom.xml
@@ -98,16 +98,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>admin</name>
-		    <password>password</password>
-	      <url>http://34.229.150.207:8089/repository/wallmart-release/</url>
+	      <name>mohan</name>
+		<url>http://34.229.150.207:8089/repository/wallmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>admin</name>
-		    <password>password</password>
-	      <url>http://34.229.150.207:8089/repository/wallmart-snapshot//</url>
+	      <name>mohan</name>
+		<url>http://34.229.150.207:8089/repository/wallmart-snapshot//</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
