--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,13 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>mohan</name>
+	      <name>admin</name>
 		<url>http://34.229.150.207:8089/repository/wallmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>mohan</name>
+	      <name>admin</name>
 		<url>http://34.229.150.207:8089/repository/wallmart-snapshot//</url>
 	    </snapshotRepository>
 	    
